assets/deployments/traefik/traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7.18
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
            - name: admin
              containerPort: 8080
          args:
            - --api
            - --kubernetes
            - --logLevel=ERROR

          volumeMounts:
            - mountPath: /certs
              name: certs
              readOnly: True

            - mountPath: /traefik.toml
              name: config
              subPath: traefik.toml

            - mountPath: /extensions/
              name: extensions
              readOnly: False

            - mountPath: /var/run/docker.sock
              name: dockersock
              readOnly: False

            - mountPath: /var/log
              name: logs
              readOnly: False

      volumes:
        - name: certs
          nfs:
            server: --fs--.efs.--region--.amazonaws.com
            path: /traefik/traefikcert

        - configMap:
            name: traefik-toml-cm
          name: config

        - name: extensions
          nfs:
            server: --fs--.efs.--region--.amazonaws.com
            path: /traefik/extensions

        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
            type: File

        - name: logs
          nfs:
            server: --fs--.efs.--region--.amazonaws.com
            path: /logs/traefik

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: secureweb
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
